# PlusCraft

./: CMakeLists.txt  Camera.hpp  README.md  Shader.hpp  main.cpp
res/shaders/: container.frag
src/: Block.cpp  Block.hpp  Camera.hpp  Color.hpp  Entity.hpp  Shader.hpp  Texture.cpp  Texture.hpp  main.cpp
